fix CartIconCounterComponent vertical alignment

--- a/src/components/common/cart-icon-counter.module.css
+++ b/src/components/common/cart-icon-counter.module.css
@@ -1,6 +1,4 @@
 .cartIconCounterWrapper {
-  display: flex;
-  align-items: center;
   position: relative;
 }
 
