--- a/src/components/header/header-cart.module.css
+++ b/src/components/header/header-cart.module.css
@@ -3,6 +3,10 @@
   margin-right: 25px;
 }
 
+.headerCartCounter {
+  display: flex;
+}
+
 @media (max-width: 768px) {
 
   .headerCart {
